# Repetitor

./: CMakeLists.txt  README.md  check_cpp.sh  main.cpp  preprocessor.cpp  preprocessor.h  source_module.cpp  source_module.h  splitter.cpp  splitter.h
.github/workflows/: cmake-multi-platform.yml
run/: main.txt
